--- a/themes/hugo-theme-shell/layouts/partials/footer.html
+++ b/themes/hugo-theme-shell/layouts/partials/footer.html
@@ -8,11 +8,5 @@
     text-align: center;
   "
 >
-  <a
-    class="beian"
-    style="color: #000"
-    href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=2021001160"
-    target="_blank"
-    >湘ICP备2021001160号-1</a
-  >
+<a href="https://beian.miit.gov.cn/" target="_blank">湘ICP备2021001160号-1</a>
 </p>
